<resources>
    <string name="app_name">Secure HomeWork</string>

    <string name="retry">Retry</string>
    <string name="error_internet">Please check your internet connection</string>
    <string name="error_enter">You have entered incorrect email or password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <b>Register Now</b></string>
    <string name="email">email</string>
    <string name="email_hint">myemail@gmail.com</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account_login_now">Already have an account? <b>Login Now</b></string>

    <string name="enable_biometric_authentication">Enable biometric authentication?</string>
    <string name="use_your_biometric_to_sign_in">Use your biometric to sign in</string>
    <string name="enable">enable</string>
    <string name="not_now">not now</string>

    <string name="strong_biometry">Strong biometry</string>
    <string name="dismiss">dismiss</string>
    <string name="input_your_biometry">Input your biometry</string>
    <string name="we_need_your_finger">We need your finger</string>

    <string name="secret_data">Secret data</string>
    <string name="weak_biometry">Weak biometry</string>

    <string name="biometry_not_supported">Biometry not supported</string>



</resources>